test/SILOptimizer/performance-annotations-noassert-stdlib.code
// RUN: %target-language-frontend -parse-as-library -disable-availability-checking -import-objc-header %S/Inputs/perf-annotations.h -emit-sil %s -o /dev/null -verify

// REQUIRES: language_in_compiler
// REQUIRES: language_stdlib_no_asserts,optimized_stdlib

@_noAllocation
fn createEmptyArray() {
  _ = [Int]() // expected-error {{ending the lifetime of a value of type}}
}